--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,9 @@
 </head>
 <body>
     Hello World
+    <p>Type a function:</p>
+    <input type="text" id="fn">
+    <button id="btn">Run</button>
     <div id="root">
 
     </div>
