--- a/views/404.ejs
+++ b/views/404.ejs
@@ -8,12 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-    <% data.forEach(function (post) { %>
-        <li>
-            <a href="/p/<%= post.url %>"><%= post.title %></a>
-        </li>
-    <% }) %>
-    </ul>
+    <h1>404</h1>
+    <p>Im sorry, the page you we're looking for cannot be found</p>
 </body>
 </html>
